Fixed images from clipping beyond screen.

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -6,6 +6,7 @@
   left: 0;
   bottom: 0;
   right: 0;
+  overflow: hidden;
 }
 
 .app__art--pokeball,
@@ -26,10 +27,10 @@
 }
 
 .app__art--pokemon {
-  bottom: -155px;
-  right: -65px;
+  bottom: -25px;
+  right: -85px;
   width: 375px;
-  height: 375px;
+  height: 150px;
   background-image: url("../assets/images/pokemon.png");
 }
 
