--- a/src/css/PokemonTile.css
+++ b/src/css/PokemonTile.css
@@ -6,13 +6,14 @@
     border-radius: 15px;
     border: 1px solid black;
     box-shadow: 5px 5px 0 black;
+    text-align: center;
 }
 
 .pokemonTile__thumbnail {
     width: 100%;
     height: 100px;
     background-repeat: no-repeat;
-    background-size: 110%, contain;
+    background-size: 104%, contain;
     background-position: center;
 }
 
