--- a/src/css/PokemonTileContainer.css
+++ b/src/css/PokemonTileContainer.css
@@ -2,9 +2,3 @@
     display: flex;
     justify-content: space-evenly;
 }
-
-.pokemonTileContainer__loader {
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-}
